# dih

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample-compose.yml  setup.py
.github/workflows/: test.yml
assets/: install-venv.md
docker/: focal.dockerfile  handler.sh  jammy.dockerfile
src/: docker_helper.py  gui.py  handler.py  main.py  utils.py
src/dih/: docker_helper.py  gui.py  main.py  utils.py
test/: test_docker_helper.py  test_gui.py  test_handler.py  test_utils.py
